Fixed portfolio overlay text not being left aligned

--- a/css/layout.css
+++ b/css/layout.css
@@ -492,6 +492,7 @@ ul#nav li.current a { color: #F06000; }
 .portfolio-item .portfolio-item-meta h5 {
    font: 14px/21px 'opensans-bold', sans-serif;
    color: #fff;
+   text-align: left;
 }
 .portfolio-item .portfolio-item-meta p {
    font: 12px/18px 'opensans-light', sans-serif;
